--- a/index.css
+++ b/index.css
@@ -24,3 +24,9 @@
     width:max-content;
     
 }
+/* #lvl1, #lvl2, #lvl3, #lvl4, #lvl5{
+    background-color:rgb(192, 167, 25);
+} */
+button{
+
+}
