--- a/index.css
+++ b/index.css
@@ -1,8 +1,13 @@
+body{
+    /* background-image: url("./background.jpg"); */
+    background-color: rgb(34, 36, 56);
+}
 #main{
     display: flex;
     flex-direction: row;
     align-items: stretch;
-   
+    background-color: rgb(34, 36, 56);
+    color: white;
 }
 #side-panel{
     text-align: center;
@@ -12,8 +17,9 @@
     width: 15%;
     justify-content: space-evenly;
     margin-right: 10px;
-    background-color: cadetblue;
+    background-color: rgb(200, 221, 14);
     height: 100vh;
+    opacity: 0.8;
 }
 #side-panel ul li{
     list-style:none;
@@ -23,10 +29,4 @@
     padding: 5%;
     width:max-content;
     
-}
-/* #lvl1, #lvl2, #lvl3, #lvl4, #lvl5{
-    background-color:rgb(192, 167, 25);
-} */
-button{
-
 }
